Fixed project section sizing across media queries
Issue: Project section showed up as too small on mobile

Solution: Adjusted project section across all devices w/o zoom to size properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ a {
 	--distance: 46%;
 	--projCards: 5;
 	--projCardSize: 600px;
-	--projSectionSize: 150vh;
+	--projSectionSize: calc(var(--projCardSize) * 3);
 }
 
 .welcome-img-box::after {
@@ -833,19 +833,15 @@ form.contFrm {
 	}
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1024px) {
 	#project-section {
-		height: calc(var(--projSectionSize) + 600px);
-	}
-
-	.proj-button {
-		padding: 0.1em 0.5em;
+		height: calc(var(--projSectionSize) * 1.5);
 	}
 }
 
 @media (max-width: 768px) {
 	#project-section {
-		height: calc(var(--projSectionSize) + 400px);
+		height: calc((var(--projSectionSize)) * 1.5);
 	}
 
 	.proj-card {
@@ -864,10 +860,10 @@ form.contFrm {
 	}
 
 	#project-section {
-		height: calc(var(--projSectionSize) * 2 + 100px);
+		height: calc(var(--projSectionSize) * 2);
 	}
 	.proj-card {
-		height: 600px;
+		height: var(--projCardSize);
 	}
 	.proj-row {
 		height: 90%;
@@ -890,7 +886,6 @@ form.contFrm {
 		padding: 3ch;
 	}
 
-
 	.proj-button {
 		padding: 0.2em 1em;
 	}
@@ -899,8 +894,6 @@ form.contFrm {
 		width: 80%;
 		margin: 0 auto;
 	}
-
-
 }
 
 @media (max-width: 325px) {
